syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Ligric.Protos";

package Ligric.Protos;

service UserApis {
	rpc Save(SaveApiRequest) returns (SaveApiResponse);
    rpc ApisSubscribe(ApiSubscribeRequest) returns (stream ApisChanged);
}

message Api {
	int64 id = 1;
	string name = 2;
	string publicKey = 3;
	string privateKey = 4; 
}

message ApiClient {
	int64 id = 1;
	string name = 2;
	int32 permissions = 3;
}

message SaveApiRequest {
	string name = 1;
	int64 ownerId = 2;
	string publicKey = 3;
	string privateKey = 4;
}

message SaveApiResponse {
	int64 apiId = 1;
	ResponseResult result = 2;
}

message ApiSubscribeRequest
{
	int64 userId = 1;
}

message ApisChanged {
	ApiClient api = 1;
	Action action = 2;
}
